# marigold

./: Makefile  README.md  initial_setup.py  pyproject.toml
.github/: rename_project.sh
docker/: README.md
docker/backend/: Dockerfile
docker/compose/: Dockerfile
docker/dev/: Dockerfile
docker/release/: Dockerfile
docs/: conf.py  index.rst
marigold/: __init__.py
marigold/backend/deployment/: __init__.py  connection_client.py  deployment_server.py
marigold/backend/discord/: __init__.py  discord_client.py
marigold/backend/gateway/: __init__.py  connection_client.py  gateway_server.py
marigold/backend/training/: __init__.py  connection_client.py  training_server.py
marigold/configs/dataset/: mnist.yaml
marigold/configs/model/: cnn.yaml  mlp.yaml
marigold/configs/paths/: default.yaml
marigold/core/: __init__.py  base.py  config.ini  config.py
marigold/data/: __init__.py  mnist.py
marigold/models/: __init__.py  cnn.py  mlp.py
marigold/modules/: __init__.py  gpt.py  registry.py
marigold/scripts/: create_project_directories.py  train.py
marigold/types/: __init__.py
marigold/utils/: __init__.py  conversions.py  dynamic.py  timer.py
tests/: __init__.py
tests/mltemplate/core/: test_config.py
tests/mltemplate/modules/: test_registry.py
tests/mltemplate/utils/: test_checks.py  test_conversions.py  test_logging.py  test_timer.py  test_timer_collection.py
